NetBSD Problem Report #52898

From gson@gson.org  Thu Jan  4 15:04:14 2018
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6E1557A1C4
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  4 Jan 2018 15:04:14 +0000 (UTC)
Message-Id: <20180104150405.ED9E8989D32@guava.gson.org>
Date: Thu,  4 Jan 2018 17:04:05 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: ssh -v prints debug message on every keystroke
X-Send-Pr-Version: 3.95

>Number:         52898
>Category:       bin
>Synopsis:       ssh -v prints debug message on every keystroke
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jan 04 15:05:00 +0000 2018
>Closed-Date:    Tue Jan 16 08:05:45 +0000 2018
>Last-Modified:  Tue Jan 16 08:05:45 +0000 2018
>Originator:     Andreas Gustafsson
>Release:        NetBSD 7, NetBSD-current
>Organization:
>Environment:
System: NetBSD guava.gson.org 7.1_STABLE NetBSD 7.1_STABLE (GUIDO) #0: Fri Nov 10 10:29:06 EET 2017 gson@guido.araneus.fi:/bracket/prod/7/amd64/obj/sys/arch/amd64/compile/GUIDO amd64
Architecture: x86_64
Machine: amd64
>Description:

For many years, I have been in the habit of using the "-v" option of
ssh because it prints useful information about the progress of the
connection setup, the ciphers used, etc.

However, in recent versions of NetBSD, including NetBSD 7 and
-current, "ssh -v" has started printing a debug message for every
keystroke sent to the server, even at the lowest verbosity setting
implied by the single "-v" option.  For example, if I type "ls -al",
it is echoed as:

$ debug1: mac 0x7f7ff7b1d6b0, 1 1
ldebug1: mac 0x7f7ff7b1d6b0, 1 1
sdebug1: mac 0x7f7ff7b1d6b0, 1 1
 debug1: mac 0x7f7ff7b1d6b0, 1 1
-debug1: mac 0x7f7ff7b1d6b0, 1 1
adebug1: mac 0x7f7ff7b1d6b0, 1 1
ldebug1: mac 0x7f7ff7b1d6b0, 1 1

Since this makes the echoed commands effectively unreadable, it means
that every time I type "ssh -v" either out of old habit, or because
there was some issue with the connection that I actually needed to
diagnose, I will have to log out and log in again without the "-v".

Can we please have the old behavior back?

>How-To-Repeat:

ssh -v some.server
type a shell command

>Fix:

>Release-Note:

>Audit-Trail:
From: "Maya Rashish" <maya@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52898 CVS commit: src/crypto/external/bsd/openssh/dist
Date: Mon, 15 Jan 2018 05:04:58 +0000

 Module Name:	src
 Committed By:	maya
 Date:		Mon Jan 15 05:04:58 UTC 2018

 Modified Files:
 	src/crypto/external/bsd/openssh/dist: packet.c

 Log Message:
 Move spammy debug message to debug2.
 Similarly spammy messages exist in this debug level.

 Requested by gson in PR bin/52898:
 ssh -v prints debug message on every keystroke


 To generate a diff of this commit:
 cvs rdiff -u -r1.29 -r1.30 src/crypto/external/bsd/openssh/dist/packet.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: coypu@sdf.org
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/52898: ssh -v prints debug message on every keystroke
Date: Mon, 15 Jan 2018 05:16:10 +0000

 blame to this line points to:
 https://github.com/NetBSD/src/commit/3f949a6a81edb46b9747d6af803f7caf7659d9c8

 it is entirely a local addition.

State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Tue, 16 Jan 2018 08:05:45 +0000
State-Changed-Why:
Confirmed fixed.  Thanks maya.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.